[project]
name = "feed"
version = "0.1.0"
description = "KISS CLI RSS reader"
requires-python = ">=3.11"

[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.7"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Function complexity (explicitly excluded)
    "C901",     # mccabe complexity
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR0914",  # too many local variables
    "PLR0915",  # too many statements
    "PLR0916",  # too many boolean expressions
    "PLR0917",  # too many positional arguments

    # Style preferences for this codebase
    "COM812",   # trailing comma — formatter handles
    "D",        # no project-wide docstring policy
    "ANN",      # gradual annotations on the public surface only
    "T201",     # this is a CLI; print() is intentional
    "PLW0603",  # disable_colors() and tests deliberately mutate module globals
    "DTZ901",   # datetime.min is used as a sort fallback for missing dates
    "FBT002",   # boolean-default positional arguments are fine here
    "TRY300",   # `else` after try is opinionated
    "TRY003",   # long exception messages
    "TRY301",   # raise within try
    "PTH123",   # `open(path)` with context manager is idiomatic enough
    "EM101",    # exception message strings inline are fine
    "EM102",    # f-string in raise is fine
    "S310",     # urlopen on user-configured RSS URLs is the whole point
    "S314",     # ElementTree is XXE-safe in Python 3.7.1+ (see fetch_feed comment)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PT009",    # this project uses unittest, not pytest
    "PT027",    # ditto: assertRaises, not pytest.raises
    "SLF001",   # tests access private members deliberately
    "S101",     # asserts in tests are the point
    "INP001",   # tests/ is a package
    "S110",     # silenced log_message in test HTTP server is intentional
    "PLR2004",  # magic numbers in assertions are fine
]
